@@ -162,56 +162,25 @@ def make_msgid(timesecs=None, pid=None):
 
 
 def make_date(timesecs=None, localtime=1):
-    """Return an rfc2822 compliant Date string.  e.g,
-
-    Fri, 30 Nov 2001 04:06:11 -0700 (MST)
+    """Return an RFC 2822 compliant Date: string.
     
     timesecs is optional, and if not given, the current time is used.
 
     Optional localtime is a flag that when true, returns a date
-    relative to the local timezone instead of UTC.  This is the
-    default.
+    relative to the local timezone instead of UTC where possible.
+
+    JRM: Once the email mod is included within TMDA, we can nuke this
+    function and use email.Utils.formatdate in all cases.
     """
     if not timesecs:
         timesecs = time.time()
-    if localtime:
-        timetuple = time.localtime(timesecs)
-        tzname = time.tzname[timetuple[-1]]
-    else:
-        timetuple = time.gmtime(timesecs)
-        tzname = 'UTC'
     try:
-        import email.Utils
-        rfc2822date = email.Utils.formatdate(timesecs,localtime)
-        rfc2822date_tzname = '%s (%s)' % (rfc2822date, tzname)
+        from email.Utils import formatdate
+        datestr = formatdate(timesecs, localtime)
     except ImportError:
-        # This except block can be removed once Python >= 2.2 is required.
-        if localtime:
-            # Calculate timezone offset, based on whether the local zone has
-            # daylight savings time, and whether DST is in effect.
-            if time.daylight and timetuple[-1]:
-                offset = time.altzone
-            else:
-                offset = time.timezone
-            hours, minutes = divmod(abs(offset), 3600)
-            # Remember offset is in seconds west of UTC, but the timezone is in
-            # minutes east of UTC, so the signs differ.
-            if offset > 0:
-                sign = '-'
-            else:
-                sign = '+'
-            zone = '%s%02d%02d (%s)' % (sign, hours, minutes / 60, tzname)
-        else:
-            # Timezone offset is always -0000
-            zone = '%s (%s)' % ('-0000', tzname)
-        rfc2822date_tzname = '%s, %02d %s %04d %02d:%02d:%02d %s' % (
-            ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'][timetuple[6]],
-            timetuple[2],
-            ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-             'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'][timetuple[1] - 1],
-            timetuple[0], timetuple[3], timetuple[4], timetuple[5],
-        zone)
-    return rfc2822date_tzname
+        from rfc822 import formatdate
+        datestr = formatdate(timesecs)
+    return datestr
 
 
 def file_to_dict(file, dict):
